# rust-axum-async-graphql-postgres-redis-starter

./: Cargo.toml
