[package]
name = "rust-axum-async-graphql-postgres-redis-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-graphql = { version = "7.2.0", features = [
    "apollo_tracing",
    "dataloader",
] }
async-graphql-axum = "7.2.0"
axum = { version = "0.8.8", features = ["ws"] }
axum-core = "0.5.6"
axum-extra = { version = "0.10.3" }
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
bb8-redis = "0.26.0"
bytes = "1.10.1"
dotenvy = "0.15.7"
firebase-auth = { version = "0.5.1", default-features = false, features = [
    "axum",
] }
http = "1.3.1"
jsonwebtoken = "=9.1.0"
mime = "0.3.17"
redis = { version = "1.0.4", features = ["aio"] }
serde = "1.0.228"
serde_json = "1.0.145"
simd-json = "0.17.0"
tikv-jemallocator = "0.6.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.16"
tokio-stream = "0.1.17"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
    "compression-gzip",
    "cors",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.release]
debug = false
codegen-units = 1
lto = true

[lib]
name = "rust_axum_async_graphql_postgres_redis_starter"
crate-type = ["lib"]
path = "src/lib.rs"
doctest = false
